style.css
body{
    margin:0;
    padding: 0;
    color: gray;
    background-color: rgb(50, 49, 49);
    line-height: 1.6;
    font-family: Arial, Helvetica, sans-serif;
}

header{
    background-color: black;
    text-align: center;
}

nav{
    background-color: gray
}

nav ul{
    list-style: none;
    padding: 12px 0;
    margin: 0;
    display: flex;
    justify-content: center;
}

nav ul li{
    margin: 0 15px;

}

nav ul li:hover{
    background-color: #333;
    border-radius: 8px;
    
}

nav ul li a{
    color: white;
    text-decoration: none;
    font-size: 18px;
}

.hero img{
    width: 100%;
    height: auto;
}

section{
    padding: 20px;
    max-width: 800px;
    margin: 20px auto;
    border-radius: 8px;
    max-width: 900px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    transition: box-shadow 0.3s ease;

}

section h3{
    font-size: 28px;
    margin-bottom:14px ;
}

section:hover{
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
}
    

.gallery{
    display: flex;
    flex-wrap: wrap;
    gap: 15px;
}
 
.jeff1{
    background-color: rgb(50, 49, 49);
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    
}

#jeff1{
    margin-left: 20px;
    margin-top: 20px;
    height: 300px;
    width: 300px;
}

.jeff2{
    margin-left: 50px;
    margin-top: 20px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}
#jeff2{
    margin-left: 20px;
    margin-top: 20px;
    height: 300px;
    width: 300px;
    justify-content: center;
}

.jeff3{
    margin-left: 20px;
    margin-top: 20px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

#jeff3{
    margin-left: 30px;
    margin-top: 20px;
    height: 300px;
    width: 300px;
}
    
.jeff4{
    margin-left: 20px;
    margin-top: 20px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

#jeff4{
    margin-left: 60px;
    margin-top: 20px;
    height: 300px;
    width: 300px;
}

div img{
    height: 200px;
    width: 200px;
}

form{
    max-width: 650px;
    margin: 20px auto;
}

form label{
    font-weight: 600;
    margin-bottom: 8px;
    display: block;
}

form input, form textarea{
    width: 100%;
    padding: 14px;
    margin-bottom: 18px;
    border: 1px solid #ccc;
    border-radius: 8px;
}

form button{
    background-color: black;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 8px;
    cursor: pointer;
}

form button:hover{
    background-color: #333;
}

footer{
    background-color: black;
    color: white;
    text-align: center;
    padding: 12px 0;
}

